--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   intl: ^0.17.0
+  firebase_auth: ^3.3.18
+  firebase_core: ^1.17.0
+  flutter_initicon: ^2.0.0
   flutter:
     sdk: flutter
+  provider: ^6.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,6 +66,7 @@ flutter:
     - assets/images/puzzle.png
     - assets/images/success.png
     - assets/images/astronaut.png
+    - assets/images/register.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
